Update with more methond and corrections